# jupyter-utils

./: README.md  kernel_create.py  pyproject.toml  setup.py
jupyter_utils/: __init__.py  kernels.py
