[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-utils"
version = "0.1.0"
authors = [
    {name = "CSCS", email = "info@cscs.ch"},
    {name = "Manuel Stutz", email = "manuel.stutz@fhnw.ch"},
]
license-files = ["LICENSE"]
readme = "README.md"

# Valid classifiers: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",

    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",

    # Python-Versions supported
    "Programming Language :: Python :: 3"
]

requires-python = ">= 3"

[project.scripts]
kernel-create =  "jupyter_utils:main"